--- a/app/flex/com/wefootball/components/account/InformationBox.mxml
+++ b/app/flex/com/wefootball/components/account/InformationBox.mxml
@@ -19,7 +19,7 @@
 			}
 		]]>
 	</mx:Script>
-	<mx:Grid>
+<!--	<mx:Grid>
 		<mx:GridRow width="100%" height="100%">
 			<mx:GridItem width="100%" height="100%">
 				<mx:Label text="昵称" />
@@ -61,6 +61,16 @@
 			</mx:GridItem>
 		</mx:GridRow>
 	</mx:Grid>
-	<mx:Text id="usummary" text="{user.summary}" />
+	<mx:Text id="usummary" text="{user.summary}" />-->
+	<mx:DataGrid rowCount="1">
+		<mx:ArrayCollection >
+			<mx:Object age="23" nickname="霏昀" fitfoot="左"/>
+		</mx:ArrayCollection>
+		<mx:columns>
+			<mx:DataGridColumn dataField="nickname"/>
+			<mx:DataGridColumn dataField="age"/>
+			<mx:DataGridColumn dataField="fitfoot"/>
+		</mx:columns>
+	</mx:DataGrid>
 </mx:VBox>
 
