--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -1,5 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml"
-	width="100%" height="100%" backgroundColor="#FFFFFF">
-	<mx:Label text="TODO"/>
+<mx:VBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
+	xmlns:msg="com.wefootball.components.message.*" xmlns:acc="com.wefootball.components.account.*"
+	horizontalAlign="center"
+	verticalAlign="middle" width="100%" height="100%">
+
+<mx:Metadata>
+	[Event(name="messageDetail", type="com.wefootball.events.MessageDetailEvent")]
+</mx:Metadata>
+<mx:Metadata>
+	[Event(name="sendMessageComplete", type="com.wefootball.events.MessageEvent")]
+</mx:Metadata>
+<mx:Metadata>
+	[Event(name="messageReply", type="com.wefootball.events.MessageReplyEvent")]
+</mx:Metadata>
+
+<mx:Script>
+<![CDATA[
+	import com.wefootball.events.MessageDetailEvent;
+	import com.wefootball.events.MessageEvent;
+	import mx.controls.Alert;
+	import com.wefootball.components.message.MessageDetailBox;
+	import com.wefootball.components.message.MessageListBox;
+	
+	[Bindable]
+	private var _reviews:String ='We football!!';
+	
+ 	private function init():void
+	{
+		messageListBox.addEventListener("messageDetail", function():void{
+			messageAccordion.selectedChild=messageDetailBox;
+			messageDetailBox.messageInfo = messageListBox.messageInfo;
+		});
+		
+		messageBox.addEventListener("sendMessageComplete", function():void{
+			messageAccordion.selectedChild = messageListBox;
+			messageListBox.listMessages();
+			messageListBox.tn.selectedIndex=1;
+		});
+		
+		messageDetailBox.addEventListener("messageReply", function():void{
+			messageAccordion.selectedChild = messageBox;
+			messageBox.messageInfoBack = messageDetailBox.messageInfoBack;
+		});
+	} 
+]]>
+</mx:Script>
+	
+	
+	<mx:Label text="We football!!"/>
+		<mx:Spacer height="10"/>
+			<mx:Text width="100"/>
+		<mx:Spacer height="10"/>
+		<mx:Accordion id="messageAccordion" width="800" height="600" creationComplete="init()">
+			<msg:MessageListBox id="messageListBox" />
+			<msg:MessageDetailBox id="messageDetailBox"/>
+			<msg:MessageBox  id="messageBox" />
+			<acc:InformationBox  id="informationBox" />
+		</mx:Accordion>
+	<mx:Label text="We football!!"/>
 </mx:VBox>
