--- a/app/flex/com/wefootball/components/message/MessageListBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageListBox.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%"
-	height="100%" label="Messege List" xmlns:msg="com.wefootball.components.message.*">
+	height="100%" label="Messege List" xmlns:msg="com.wefootball.components.message.*"  creationComplete=" Alert.show('Welcome ' + User.currentUser.login);">
 
 <mx:Metadata>
 	[Event(name="messageDetail", type="com.wefootball.events.MessageDetailEvent")]
@@ -12,6 +12,7 @@
     		import mx.controls.Alert;
     		import mx.rpc.events.ResultEvent;
     		import com.wefootball.events.MessageEvent;
+    		import com.wefootball.model.User;
     		
     		[Bindable]
     		public var messageInfo:XML;
