--- a/app/flex/com/wefootball/components/message/MessageListBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageListBox.mxml
@@ -11,28 +11,28 @@
     		import com.wefootball.events.MessageDetailEvent;
     		import mx.controls.Alert;
     		import mx.rpc.events.ResultEvent;
+    		import mx.rpc.events.FaultEvent;
     		import com.wefootball.events.MessageEvent;
     		import com.wefootball.model.User;
+    		import com.wefootball.model.Message;
+    		import mx.collections.XMLListCollection;
     		
     		[Bindable]
     		public var messageInfo:XML;
+    		[Bindable]
+    		public var messagesReceiveXLC:XMLListCollection;
+    		[Bindable]
+    		public var messagesSendXLC:XMLListCollection;
+    	
     		
     		internal function readMessageInv(selectedRow:Object):void{
     		}
     		
+    		
     		internal function deleteMessage(data:Object):void{
-    			svcMessageDestory.url = "/messages/" + data.id + ".xml";
-    			svcMessageDestory.send({_method:"DELETE"});
-    			Alert.show();
+    			Message.destory(data.id,handleMessageDestoryResult,handleMessageDestoryFaultResult); 
     		}
-     		public function listMessages():void{
-     			svcMessageList.send();
-     		}
-     		private function handleMessageList(event:ResultEvent):void{
-     			//Alert.show(svcMessageList.lastResult.toString());
-     		} 	
-     		
-     		private function handleMessageDestoryResult(event:ResultEvent):void{
+    		private function handleMessageDestoryResult(event:ResultEvent):void{
      			if (event.result == "error") {
 					Alert.show("The task was not successfully deleted.","Error");
 				} else {
@@ -40,8 +40,25 @@
 					listMessages();
 				}
 			}
-     	
+			private function handleMessageDestoryFaultResult(event:FaultEvent):void{
+				Alert.show("Delete failed");
+				listMessages();
+			}
+			
+     		public function listMessages():void{
+     			Message.list(handleMessageListResult,handleMessageFaultListResult); 
+     		}
+     		public function handleMessageListResult(event:ResultEvent):void{
+     			this.messagesReceiveXLC = new XMLListCollection;
+  	 			this.messagesReceiveXLC.source = event.result['as_receiver']['message'];
+  	 			this.messagesSendXLC = new XMLListCollection;
+  	 			this.messagesSendXLC.source = event.result['as_sender']['message'];
+     		} 	
+     		public function handleMessageFaultListResult(event:FaultEvent):void{
+     			//Alert.show(ResultEvent.RESULT.toString());
+     		} 
      		
+		
      		internal function messageDetail(data:Object):void{
      			this.messageInfo = XML(data);
      			dispatchEvent(new MessageDetailEvent());
@@ -51,24 +68,24 @@
     	]]>
     </mx:Script>
 
-	<mx:HTTPService
+<!--	<mx:HTTPService
 	    id="svcMessageDestory"
 	    resultFormat="e4x"
 	    method="POST"
 	    result="handleMessageDestoryResult(event)"
-	/>
+	/>-->
 	
-	<mx:HTTPService
+<!--	<mx:HTTPService
 	    id="svcMessageList"
 	    url="/messages.xml"
 	    resultFormat="e4x"
 	    method="GET"
-	    result="handleMessageList(event)"
-	/>
-	<mx:XMLListCollection id="messagesReceiveXLC"
-  	  source="{svcMessageList.lastResult['as_receiver']['message']}"/>
-	<mx:XMLListCollection id="messagesSendXLC"
-  	  source="{svcMessageList.lastResult['as_sender']['message']}"/>
+	    result="handleMessageReceiveList(event)"
+	/>-->
+<!--	<mx:XMLListCollection id="messagesReceiveXLC"
+  	  source="{svcMessageList.lastResult['as_receiver']['message']}"/>-->
+<!--  	<mx:XMLListCollection id="messagesSendXLC"
+  	  source="{svcMessageList.lastResult['as_sender']['message']}"/>-->
 	
     <mx:TabNavigator id="tn"  width="100%" height="100%">
     <!-- Define each panel using a VBox container. -->
@@ -127,7 +144,7 @@
 	        				<mx:Button label="删除" click="outerDocument.deleteMessage(data)"/>
 	        			</mx:Component>
 	        		</mx:itemRenderer>
-        		</mx:DataGridColumn>        	
+        		</mx:DataGridColumn>     
 			</mx:columns>		
 		</mx:DataGrid>
 		<mx:Button id="ClearSendButton" 
