--- a/app/flex/com/wefootball/components/NotificationBox.mxml
+++ b/app/flex/com/wefootball/components/NotificationBox.mxml
@@ -2,12 +2,12 @@
 
 <mx:VBox
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:wf="com.wefootball.components.*"
+	xmlns:wf="com.wefootball.components.friend.*"
     initialize="tryGetFriendInvSummary()"
 >
 	<mx:Script>
 		<![CDATA[
-			import com.wefootball.components.FriendInvitationNotifyBox;
+			import com.wefootball.components.friend.FriendInvitationNotifyBox;
 			
 			private function tryGetFriendInvSummary():void{
 				friendInvNotifyBox.getFriendInvSummary();
