--- a/app/flex/com/wefootball/components/friend/FriendListBox.mxml
+++ b/app/flex/com/wefootball/components/friend/FriendListBox.mxml
@@ -3,14 +3,33 @@
 
     <mx:Script>
     	<![CDATA[
+    		import mx.controls.Image;
     		import mx.controls.Alert;
     		import mx.rpc.events.ResultEvent; 		 				
     		 	
      		private function listFriend():void{
-     			svcPreFriendRelationList.send();
+     			//这里仅为测试之用，实际的取值应该来自于所传入的事件     			
+     			svcFriendList.request["user_id"] = 1;
+     			svcFriendList.send();
      		}
-     		private function handlePreFriendRelationList(event:ResultEvent):void{
-     		}      					  		
+     		private function handleFriendList(event:ResultEvent):void{
+     			  prepareDataSource(event.result);   			
+     		}
+     		
+     		//var img:Image = new Image;
+
+     		private function prepareDataSource(result:Object):void
+     		{
+     			//this.addChild(img)
+     			//img.source = '/images/defaultUserPic.jpg';
+     			for(var i:int = 0;i < result['user']["nickname"].length();i ++)
+     			{
+/*       				var tempImg:Image = new Image;
+     				tempImg.source = "/images/defaultUserPic.jpg"; */ 
+     				var userInfo:Object = {label:result['user']["nickname"][i],img:"/images/defaultUserPic.jpg"};
+     				friendListAC.addItem(userInfo);
+     			}
+     		}    					  		
     	]]>	
     </mx:Script>
    
@@ -21,9 +40,18 @@
 	    method="GET"
 	    result="handleFriendList(event)"
 	/>
-	<mx:XMLListCollection id="FriendXLC"
-    source="{XMLList(svcFriendList.lastResult.children())}"/>
+	
+	<mx:ArrayCollection id="friendListAC" />
 
-	<mx:TileList dataProvider="{FriendXLC}"
-      itemRenderer="mx.controls.Button"/>
+	<mx:TileList initialize="listFriend()" dataProvider="{friendListAC}" rowHeight="200" columnWidth="200">
+		<mx:itemRenderer>
+			<mx:Component>
+				<mx:VBox>
+					<mx:Image source="{data.img}"/>
+					<mx:Label text="{data.label}"/>					
+				</mx:VBox>
+        	</mx:Component>
+        </mx:itemRenderer>
+	</mx:TileList>
+    
 </mx:Box>
